--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ dkms.conf
 ### vscode ###
 .vscode/*
 !.vscode/settings.json
+!.vscode/arduino.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
