--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c++,vscode,c
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,vscode,c
 
+build/
+build/**
+
 ### C ###
 # Prerequisites
 *.d
